--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
     <div class="container">
         <section class="section">
-            <h2>🧠 Introduction to ChatGPT</h2>
+            <h2> Introduction to ChatGPT</h2>
         </section>
 
         <section class="section">
