--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <section class="section">
             <h2>🔹 What Technology Did We Choose?</h2>
             <p>Our team chose <strong>ChatGPT</strong>, a cutting-edge language model developed by <strong>OpenAI</strong>. ChatGPT is a form of <strong>Generative AI</strong>, specifically designed to understand and generate human-like text. It belongs to a family of models called <strong>GPT (Generative Pre-trained Transformer)</strong>, with the most recent versions demonstrating powerful capabilities in natural language understanding, conversation, content creation, summarization, and even coding.</p>
-            <p>Powered by deep learning and trained on vast datasets from books, websites, and other text sources, ChatGPT can carry out contextual dialogues, generate articles, write code, and more — all with astonishing coherence and fluidity.</p>
+            <p>Powered by deep learning and trained on vast datasets from books, websites, and other text sources, ChatGPT can carry out contextual dialogues, generate articles, write code, and more, all with astonishing coherence and fluidity.</p>
         </section>
 
         <section class="section">
@@ -68,7 +68,7 @@
                 <li>What responsibilities do developers have when releasing powerful AI tools?</li>
                 <li>How do we address <strong>bias, misinformation, or misuse</strong>?</li>
             </ul>
-            <p>These questions — and their real-world implications — make ChatGPT the perfect focus for a critical ethical discussion.</p>
+            <p>These questions and their real-world implications make ChatGPT the perfect focus for a critical ethical discussion.</p>
         </section>
     </div>
 </body>
