--- a/index.html
+++ b/index.html
@@ -4,56 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ChatGPT Project Introduction</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f9f9f9;
-            margin: 0;
-            padding: 20px;
-            line-height: 1.6;
-        }
-        header {
-            background-color: #2d2d2d;
-            color: white;
-            padding: 20px 0;
-            text-align: center;
-        }
-        .container {
-            max-width: 900px;
-            margin: 0 auto;
-            background-color: white;
-            padding: 30px;
-            box-shadow: 0 0 10px rgba(0,0,0,0.1);
-        }
-        h1, h2 {
-            color: #333;
-        }
-        ul {
-            padding-left: 20px;
-        }
-        .section {
-            margin-bottom: 30px;
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
         <h1>ChatGPT: A Critical Look at Generative AI</h1>
     </header>
 
-    <div class="container">
-        <section class="section">
-            <h2> Introduction to ChatGPT</h2>
+    <nav>
+        <ul>
+            <li><a href="#introduction">Introduction</a></li>
+            <li><a href="#technology">Technology</a></li>
+            <li><a href="#reason">Why We Chose It</a></li>
+        </ul>
+    </nav>
+
+    <main>
+        <section id="introduction">
+            <h2>Introduction to ChatGPT</h2>
         </section>
 
-        <section class="section">
-            <h2>🔹 What Technology Did We Choose?</h2>
+        <section id="technology">
+            <h2> What Technology Did We Choose?</h2>
             <p>Our team chose <strong>ChatGPT</strong>, a cutting-edge language model developed by <strong>OpenAI</strong>. ChatGPT is a form of <strong>Generative AI</strong>, specifically designed to understand and generate human-like text. It belongs to a family of models called <strong>GPT (Generative Pre-trained Transformer)</strong>, with the most recent versions demonstrating powerful capabilities in natural language understanding, conversation, content creation, summarization, and even coding.</p>
             <p>Powered by deep learning and trained on vast datasets from books, websites, and other text sources, ChatGPT can carry out contextual dialogues, generate articles, write code, and more, all with astonishing coherence and fluidity.</p>
         </section>
 
-        <section class="section">
-            <h2>🔹 Why Did We Choose ChatGPT?</h2>
+        <section id="reason">
+            <h2> Why Did We Choose ChatGPT?</h2>
             <p>We selected ChatGPT because it sits at the center of a technological and ethical revolution. Since its public release in late 2022, ChatGPT has transformed industries including:</p>
             <ul>
                 <li><strong>Education</strong> (homework help, tutoring, plagiarism concerns),</li>
@@ -70,6 +48,10 @@
             </ul>
             <p>These questions and their real-world implications make ChatGPT the perfect focus for a critical ethical discussion.</p>
         </section>
-    </div>
+    </main>
+
+    <footer>
+        <p>&copy; 2025 Our Team Project</p>
+    </footer>
 </body>
 </html>
