--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <nav>
         <ul>
             <li><a href="#introduction">Introduction</a></li>
-            <li><a href="#technology">Technology</a></li>
-            <li><a href="#reason">Why We Chose It</a></li>
+            <li><a href="#technology">Applications of Tehnology</a></li>
+            <li><a href="#reason">Critical Discussion</a></li>
         </ul>
     </nav>
 
