--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <nav>
         <ul>
             <li><a href="#introduction">Introduction</a></li>
-            <li><a href="#technology">Applications of Tehnology</a></li>
+            <li><a href="#technology">Applications</a></li>
             <li><a href="#reason">Critical Discussion</a></li>
         </ul>
     </nav>
