--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
         <section id="technology">
             <h2> What Technology Did We Choose?</h2>
-            <p>Our team chose <strong>ChatGPT</strong>, a cutting-edge language model developed by <strong>OpenAI</strong>. ChatGPT is a form of <strong>Generative AI</strong>, specifically designed to understand and generate human-like text. It belongs to a family of models called <strong>GPT (Generative Pre-trained Transformer)</strong>, with the most recent versions demonstrating powerful capabilities in natural language understanding, conversation, content creation, summarization, and even coding.</p>
+            <p>Our team chose ChatGPT, a cutting-edge language model developed by OpenAI. ChatGPT is a form ofGenerative AI, specifically designed to understand and generate human-like text. It belongs to a family of models called GPT (Generative Pre-trained Transformer), with the most recent versions demonstrating powerful capabilities in natural language understanding, conversation, content creation, summarization, and even coding.</p>
             <p>Powered by deep learning and trained on vast datasets from books, websites, and other text sources, ChatGPT can carry out contextual dialogues, generate articles, write code, and more, all with astonishing coherence and fluidity.</p>
         </section>
 
@@ -40,11 +40,11 @@
                 <li><strong>Software development</strong> (code generation, debugging assistance),</li>
                 <li><strong>Media</strong> (AI journalism, storytelling, and creative writing).</li>
             </ul>
-            <p>The pace at which ChatGPT has been adopted is unmatched, but it also brings <strong>deep ethical questions</strong>:</p>
+            <p>The pace at which ChatGPT has been adopted is unmatched, but it also brings deep ethical questions:</p>
             <ul>
                 <li>How should society respond to jobs potentially displaced by AI?</li>
                 <li>What responsibilities do developers have when releasing powerful AI tools?</li>
-                <li>How do we address <strong>bias, misinformation, or misuse</strong>?</li>
+                <li>How do we address bias, misinformation, or misuse?</li>
             </ul>
             <p>These questions and their real-world implications make ChatGPT the perfect focus for a critical ethical discussion.</p>
         </section>
