--- a/index.html
+++ b/index.html
@@ -20,17 +20,17 @@
     </nav>
 
     <main>
-        <section id="introduction">
+        <section>
             <h2>Introduction to ChatGPT</h2>
         </section>
 
-        <section id="technology">
+        <section>
             <h2> What Technology Did We Choose?</h2>
             <p>Our team chose ChatGPT, a cutting-edge language model developed by OpenAI. ChatGPT is a form ofGenerative AI, specifically designed to understand and generate human-like text. It belongs to a family of models called GPT (Generative Pre-trained Transformer), with the most recent versions demonstrating powerful capabilities in natural language understanding, conversation, content creation, summarization, and even coding.</p>
             <p>Powered by deep learning and trained on vast datasets from books, websites, and other text sources, ChatGPT can carry out contextual dialogues, generate articles, write code, and more, all with astonishing coherence and fluidity.</p>
         </section>
 
-        <section id="reason">
+        <section>
             <h2> Why Did We Choose ChatGPT?</h2>
             <p>We selected ChatGPT because it sits at the center of a technological and ethical revolution. Since its public release in late 2022, ChatGPT has transformed industries including:</p>
             <ul>
