--- a/applications.html
+++ b/applications.html
@@ -20,17 +20,17 @@
     </nav>
 
     <main>
-        <section id="introduction">
+        <section>
             <h2>Applications</h2>
         </section>
 
-        <section id="real world">
+        <section>
             <h2>Provide at least two real-world examples using the chosen technology. Provide the examples in detail so people can understand the contexts well.</h2>
             <p>1. </p>
             <p>2. </p>
         </section>
 
-        <section id="complexity">
+        <section>
             <h2> Provide the complexity or social challenges that are observed in the application contexts. Why do the situations that use the chosen technology matter? What makes it difficult to use the chosen tech well? </h2>
             <p></p>
             <ul>
