--- a/applications.html
+++ b/applications.html
@@ -13,9 +13,9 @@
 
     <nav>
         <ul>
-            <li><a href="#index.html">Introduction</a></li>
-            <li><a href="#applications.html">Applications</a></li>
-            <li><a href="#criticaldiscussion.html">Critical Discussion</a></li>
+            <li><a href="index.html">Introduction</a></li>
+            <li><a href="applications.html">Applications</a></li>
+            <li><a href="criticaldiscussion.html">Critical Discussion</a></li>
         </ul>
     </nav>
 
