--- a/index.html
+++ b/index.html
@@ -50,9 +50,11 @@
         </section>
     </main>
 
- <div class="youtube-video">
-        <iframe width="300" height="170" src="https://www.youtube.com/watch?v=pOmpqdlVCoo" frameborder="0" allowfullscreen></iframe>
-    </div>
+<div style="position: fixed; bottom: 10px; right: 10px; width: 300px; height: 170px;">
+    <a href="https://www.youtube.com/watch?v=pOmpqdlVCoo" target="_blank">
+        <img src="https://img.youtube.com/vi/pOmpqdlVCoo/hqdefault.jpg" alt="YouTube Thumbnail" style="width: 100%; height: 100%;">
+    </a>
+</div>
 
 
     
