--- a/index.html
+++ b/index.html
@@ -51,10 +51,16 @@
     </main>
 
 <div style="position: fixed; bottom: 10px; right: 10px; width: 300px; height: 170px;">
-    <a href="https://www.youtube.com/watch?v=pOmpqdlVCoo" target="_blank">
-        <img src="https://img.youtube.com/vi/pOmpqdlVCoo/hqdefault.jpg" alt="YouTube Thumbnail" style="width: 100%; height: 100%;">
-    </a>
+    <iframe 
+        width="300" 
+        height="170" 
+        src="https://www.youtube.com/embed/pOmpqdlVCoo?autoplay=1" 
+        frameborder="0" 
+        allow="autoplay; encrypted-media" 
+        allowfullscreen>
+    </iframe>
 </div>
+
 
 
     
