--- a/index.html
+++ b/index.html
@@ -50,17 +50,16 @@
         </section>
     </main>
 
-<div style="position: fixed; bottom: 10px; right: 10px; width: 300px; height: 170px;">
-    <iframe 
-        width="300" 
-        height="170" 
-        src="https://www.youtube.com/embed/pOmpqdlVCoo?autoplay=1" 
-        frameborder="0" 
-        allow="autoplay; encrypted-media" 
-        allowfullscreen>
-    </iframe>
-</div>
-
+ <div style="width: 560px; height: 315px; margin: 20px auto;">
+        <iframe 
+            width="560" 
+            height="315" 
+            src="https://www.youtube.com/embed/pOmpqdlVCoo" 
+            frameborder="0" 
+            allow="autoplay; encrypted-media" 
+            allowfullscreen>
+        </iframe>
+    </div>
 
 
     
