--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </section>
     </main>
 
- <div style="width: 560px; height: 315px; margin: 20px auto;">
+ <div style="width: 560px; height: 315px; margin: 20px 0 20px auto;">
         <iframe 
             width="560" 
             height="315" 
