--- a/applications.html
+++ b/applications.html
@@ -21,7 +21,7 @@
 
     <main>
         <section>
-            <h2>Applications</h2>
+            <h2>Applications of ChatGPT</h2>
         </section>
 
         <section>
