--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <p>These questions and their real-world implications make ChatGPT the perfect focus for a critical ethical discussion.</p>
 
 
-           <p>The youtube video below is a 12 minute CNBC video that explains why ChatGPT is such a big deal and a big part of our fututre.</p>
+           <p><strong>The youtube video below is a 12 minute CNBC video that explains why ChatGPT is such a big deal and a big part of our fututre.</strong></p>
         </section>
     </main>
 
