--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <li>How do we address bias, misinformation, or misuse?</li>
             </ul>
             <p>These questions and their real-world implications make ChatGPT the perfect focus for a critical ethical discussion.</p>
-
+            <p style="margin-bottom: 20px;">
 
            <p><strong>The youtube video below is a 12 minute CNBC video that explains why ChatGPT is such a big deal and a big part of our fututre.</strong></p>
         </section>
