--- a/ethical-anylsis.html
+++ b/ethical-anylsis.html
@@ -15,7 +15,7 @@
         <ul>
             <li><a href="index.html">Introduction</a></li>
             <li><a href="applications.html">Applications</a></li>
-            <li><a href="criticaldiscussion.html">Critical Discussion</a></li>
+            <li><a href="ethical-anylsis.html">Ethical Anylsis</a></li>
         </ul>
     </nav>
 
