--- a/ethical-anylsis.html
+++ b/ethical-anylsis.html
@@ -21,7 +21,7 @@
 
     <main>
         <section>
-            <h2>Critical Disscussion of ChatGPT</h2>
+            <h2></h2>Ethical Lenses Used in Our Analysis</h2>
         </section>
 
         <section>
