--- a/ethical-anylsis.html
+++ b/ethical-anylsis.html
@@ -21,7 +21,7 @@
 
     <main>
         <section>
-            <h2></h2>Ethical Lenses Used in Analysis, Analysis and Socail Implications </h2>
+            <h2>Ethical Lenses Used in Analysis, Analysis and Socail Implications.</h2>
         </section>
 
         <section>
