--- a/recommendations.html
+++ b/recommendations.html
@@ -21,32 +21,36 @@
 
     <main>
         <section>
-            <h2>Ethical Lenses Used in Analysis, Analysis and Socail Implications.</h2>
+            <h2>Stakeholder Audience and Reccomendations.</h2>
         </section>
 
         <section>
-            <h2>Ethical Lenses Used in Analysis.</h2>
+            <h2>Who Should Care:</h2>
             <p> We analyzed ChatGPT using three ethical frameworks:</p>
         <ul>
-            <li><strong>Utilitarianism: Focus:</strong>  Greatest good for the greatest number and Example: Boosts productivity, but displaces jobs</li>
-            <li><strong> Deontological Ethics: </strong> Focus: Doing what is morally right, regardless of outcomes and Example: Developers should prevent misuse even if it's costly</li>
-            <li><strong>Virtue Ethics: </strong> Focus: Encouraging values like honesty, responsibility, and trust and Example: Using ChatGPT to support learning, not cheat</li>
+            <li><strong>Policymakers</strong> </li>
+            <li><strong>Engineers and AI Developers</strong> </li>
+            <li><strong>Educators</strong></li>
+            <li><strong>Business Leaders</strong></li>
+            <li><strong>Global Citizens</strong></li>
         </ul>
             <br>
-           <p>These lenses provide a balanced perspective, allowing us to see both short-term benefits and long-term impacts on society.</p>
+            <h2>Why:</h2>
+           <p>ChatGPT affects education quality, workplace structures, safety, and even democratic integrity. As AI becomes more embedded in everyday life, everyone will be impacted—for better or worse—depending on how the technology is used and governed.</p>
         </section>
 
         <section>
-            <h2>Analysis and Social Implications. </h2>
-            <p>We analyzed ChatGPT using three ethical frameworks: </p>
+            <h2>Recommendations to Stakeholders.</h2>
+            <p>Stakeholders and what they should do: </p>
         <ul>
-            <li><strong>Job Displacement: </strong> Replaces customer service agents, writers, even coders.</li>
-            <li><strong>Bias & Misinformation: </strong>Trained on biased data, it may amplify stereotypes or spread false info.</li>
-            <li><strong>Overreliance: </strong>Users may depend too heavily on AI for decision-making.</li>
-            <li><strong>Accountability: </strong> If AI makes a mistake, who is at fault?</li>
+            <li><strong>Policymakers: </strong> Develop clear laws around transparency, safety testing, and ethical use.</li>
+            <li><strong>Developers: </strong>Prevent misuse, test for bias, and improve user safety.</li>
+            <li><strong>Educators: </strongeach Teach AI literacy, use ChatGPT to enhance learning, not replace it.</li>
+            <li><strong>Business Owners: </strong> Be transparent about AI use; retrain and upskill staff.</li>
+            <li><strong>Citizens(The people of the world)</strong>Stay informed, question AI responses, and use critical thinking.</li>
         </ul>
         <br>
-        <p>These issues are difficult to regulate because of how fast the technology evolves and how widely it is being adopted.</p>
+    <p>Ultimately, the future of ChatGPT and similar AI tools depends on how responsibly we choose to develop, regulate, and use them—balancing innovation with ethics to ensure technology serves the public good.</p>
         </section>
 
       
