--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <nav>
         <ul>
             <li><a href="index.html">Introduction</a></li>
-            <li><a href="ethical-anylsis.htm">Ethics</a></li>
+            <li><a href="ethical-anylsis.html">Ethics</a></li>
             <li><a herf="recommendations.html">Stakeholders Recommendations</a></li>
         </ul>
     </nav>
