--- a/index.html
+++ b/index.html
@@ -25,16 +25,27 @@
         </section>
 
         <section>
-            <h2> What Technology Did We Choose?</h2>
+            <h2> What Is Our Target Technology?</h2>
             <p>Our team chose ChatGPT, a cutting-edge language model developed by OpenAI. ChatGPT is a form ofGenerative AI, specifically designed to understand and generate human-like text. It belongs to a family of models called GPT (Generative Pre-trained Transformer), with the most recent versions demonstrating powerful capabilities in natural language understanding, conversation, content creation, summarization, and even coding.</p>
             <p>Powered by deep learning and trained on vast datasets from books, websites, and other text sources, ChatGPT can carry out contextual dialogues, generate articles, write code, and more, all with astonishing coherence and fluidity.</p>
+            <p>It is capable of generating human-like responses across a wide range of tasks including:</p>
+            <ul> 
+                <li>Conversational interaction</li>
+                <li>Code generation and debugging</li>
+                <li>Summarization</li>
+                <li>Creative writing</li>
+                <li>Decision support</li>
+            </ul>
+          <br>
+        <h2>Why It Matters:</h2>
+        <p>ChatGPT is redefining communication, education, and automation at an unprecedented scale. As one of the fastest-adopted AI tools in history, it has sparked both excitement and concern about how we interact with technology.</p>
         </section>
 
         <section>
-            <h2> Why Did We Choose ChatGPT?</h2>
+            <h2>Application Domains of ChatGPT.</h2>
             <p>We selected ChatGPT because it sits at the center of a technological and ethical revolution. Since its public release in late 2022, ChatGPT has transformed industries including:</p>
             <ul>
-                <li><strong>Education</strong> (homework help, tutoring, plagiarism concerns),</li>
+                <li><strong>Education</strong> (homework help, tutoring, plagiarism concerns), <strong> Challenges:</strong> Increased risk of plagiarism, Reduced critical thinking. Unequal access to AI tools</li>
                 <li><strong>Business</strong> (customer service, content writing, decision support),</li>
                 <li><strong>Healthcare</strong> (medical advice, mental health apps),</li>
                 <li><strong>Software development</strong> (code generation, debugging assistance),</li>
