--- a/ethical-anylsis.html
+++ b/ethical-anylsis.html
@@ -15,7 +15,7 @@
         <ul>
             <li><a href="index.html">Introduction</a></li>
             <li><a href="ethical-anylsis.html">Ethics</a></li>
-            <li><a herf="recommendations.html">Stakeholders Recommendations</a></li>
+            <li><a herf="stakeholders.html">Stakeholders</a></li>
         </ul>
     </nav>
 
