--- a/index.html
+++ b/index.html
@@ -51,18 +51,16 @@
                 <li><strong>Software development</strong> (code generation, debugging assistance),<strong>Challenges</strong> May produce incorrect or inefficient code, Risks of over-reliance in professional environments</li>
                 <li><strong>Media</strong> (AI journalism, storytelling, and creative writing), <strong>Challenges</strong>Potential spread of misinformation, Undermining human creativity and authorship</li>
             </ul>
-            <p>The pace at which ChatGPT has been adopted is unmatched, but it also brings deep ethical questions:</p>
+              <p>The pace at which ChatGPT has been adopted is unmatched—but it also raises deep ethical questions:</p>
             <ul>
                 <li>How should society respond to jobs potentially displaced by AI?</li>
                 <li>What responsibilities do developers have when releasing powerful AI tools?</li>
                 <li>How do we address bias, misinformation, or misuse?</li>
-            </ul>
+        </ul>
             <p>These questions and their real-world implications make ChatGPT the perfect focus for a critical ethical discussion.</p>
-            <br>
-            <br>
-
-           <p><strong>The youtube video below is a 12 minute CNBC video that explains why ChatGPT is such a big deal and a big part of our fututre.</strong></p>
-        </section>
+            <br><br>
+            <p><strong>The YouTube video below is a 12-minute CNBC segment that explains why ChatGPT is such a big deal—and a major part of our future.</strong></p>
+         </section>
     </main>
 
  <div style="width: 560px; height: 315px; margin: 20px 0 20px auto;">
