--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <li><a href="index.html">Introduction</a></li>
             <li><a href="ethical-anylsis.html">Ethics</a></li>
             <li><a herf="stakeholders.html">Stakeholders</a></li>
-            <li><a herf="stake.html">Stakeholders</a></li>
+            <li><a href="hello.html">hello</a></li>
         </ul>
     </nav>
 
