--- a/hello.html
+++ b/hello.html
@@ -22,46 +22,39 @@
 
     <main>
         <section>
-            <h2>Introduction to ChatGPT</h2>
+            <h2>Stakeholder Audience and Reccomendations.</h2>
         </section>
 
         <section>
-            <h2> What Is Our Target Technology?</h2>
-            <p>Our team chose ChatGPT, a cutting-edge language model developed by OpenAI. ChatGPT is a form ofGenerative AI, specifically designed to understand and generate human-like text. It belongs to a family of models called GPT (Generative Pre-trained Transformer), with the most recent versions demonstrating powerful capabilities in natural language understanding, conversation, content creation, summarization, and even coding.</p>
-            <p>Powered by deep learning and trained on vast datasets from books, websites, and other text sources, ChatGPT can carry out contextual dialogues, generate articles, write code, and more, all with astonishing coherence and fluidity.</p>
-            <p>It is capable of generating human-like responses across a wide range of tasks including:</p>
-            <ul> 
-                <li>Conversational interaction</li>
-                <li>Code generation and debugging</li>
-                <li>Summarization</li>
-                <li>Creative writing</li>
-                <li>Decision support</li>
-            </ul>
-          <br>
-        <h2>Why It Matters:</h2>
-        <p>ChatGPT is redefining communication, education, and automation at an unprecedented scale. As one of the fastest-adopted AI tools in history, it has sparked both excitement and concern about how we interact with technology.</p>
-        </section>
-
-        <section>
-            <h2>Application Domains of ChatGPT.</h2>
-            <p>We selected ChatGPT because it sits at the center of a technological and ethical revolution. Since its public release in late 2022, ChatGPT has transformed industries including:</p>
-            <ul>
-                <li><strong>Education</strong> (homework help, tutoring, plagiarism concerns), <strong> Challenges: </strong> Increased risk of plagiarism, Reduced critical thinking. Unequal access to AI tools</li>
-                <li><strong>Business</strong> (customer service, content writing, decision support),<strong>Challenges: </strong>Replaces human jobs, AI-generated content may lack accountability, Miscommunication or lack of empathy</li>
-                <li><strong>Healthcare</strong> (medical advice, mental health apps),<strong>Challenges: </strong> Ethical issues with diagnosis and mental health reliance , Lack of certified medical oversight</li>
-                <li><strong>Software development</strong> (code generation, debugging assistance),<strong>Challenges: </strong> May produce incorrect or inefficient code, Risks of over-reliance in professional environments</li>
-                <li><strong>Media</strong> (AI journalism, storytelling, and creative writing), <strong>Challenges: </strong>Potential spread of misinformation, Undermining human creativity and authorship</li>
-            </ul>
-              <p>The pace at which ChatGPT has been adopted is unmatched—but it also raises deep ethical questions:</p>
-            <ul>
-                <li>How should society respond to jobs potentially displaced by AI?</li>
-                <li>What responsibilities do developers have when releasing powerful AI tools?</li>
-                <li>How do we address bias, misinformation, or misuse?</li>
+            <h2>Who Should Care:</h2>
+            <p> We analyzed ChatGPT using three ethical frameworks:</p>
+        <ul>
+            <li><strong>Policymakers</strong> </li>
+            <li><strong>Engineers and AI Developers</strong> </li>
+            <li><strong>Educators</strong></li>
+            <li><strong>Business Leaders</strong></li>
+            <li><strong>Global Citizens</strong></li>
         </ul>
-            <p>These questions and their real-world implications make ChatGPT the perfect focus for a critical ethical discussion.</p>
-            <br><br>
-            <p><strong>The YouTube video below is a 12-minute CNBC segment that explains why ChatGPT is such a big deal—and a major part of our future.</strong></p>
-         </section>
+            <br>
+            <h2>Why:</h2>
+           <p>ChatGPT affects education quality, workplace structures, safety, and even democratic integrity. As AI becomes more embedded in everyday life, everyone will be impacted—for better or worse—depending on how the technology is used and governed.</p>
+        </section>
+
+        <section>
+            <h2>Recommendations to Stakeholders.</h2>
+            <p>Stakeholders and what they should do: </p>
+        <ul>
+            <li><strong>Policymakers: </strong> Develop clear laws around transparency, safety testing, and ethical use.</li>
+            <li><strong>Developers: </strong>Prevent misuse, test for bias, and improve user safety.</li>
+            <li><strong>Educators: </strongeach Teach AI literacy, use ChatGPT to enhance learning, not replace it.</li>
+            <li><strong>Business Owners: </strong> Be transparent about AI use; retrain and upskill staff.</li>
+            <li><strong>Citizens(The people of the world)</strong>Stay informed, question AI responses, and use critical thinking.</li>
+        </ul>
+        <br>
+    <p>Ultimately, the future of ChatGPT and similar AI tools depends on how responsibly we choose to develop, regulate, and use them—balancing innovation with ethics to ensure technology serves the public good.</p>
+        </section>
+
+      
     </main>
   
     <footer>
