--- a/hello.html
+++ b/hello.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ChatGPT Project Introduction</title>
+    <title>ChatGPT Project Stakeholders</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <header>
-        <h1>ChatGPT: A Critical Look at Generative AI</h1>
+        <h1>Critical discussion of the technology and its applications</h1>
     </header>
 
     <nav>
