--- a/stakeholders.html
+++ b/stakeholders.html
@@ -14,9 +14,9 @@
     <nav>
         <ul>
             <li><a href="index.html">Introduction</a></li>
-            <li><a href="ethical-anylsis.htm">Ethics</a></li>
+            <li><a href="ethical-anylsis.html">Ethics</a></li>
             <li><a herf="stakeholders.html">Stakeholders</a></li>
-            <li><a href="hello.htm">hello</a></li>
+            <li><a href="hello.html">hello</a></li>
         </ul>
     </nav>
 
