--- a/hello.html
+++ b/hello.html
@@ -15,7 +15,7 @@
         <ul>
             <li><a href="index.html">Introduction</a></li>
             <li><a href="ethical-anylsis.html">Ethics</a></li>
-            <li><a herf="stakeholders.html">Stakeholders</a></li>
+             <li><a href="stakeholders.html">Stakeholders</a></li>
            <li><a href="hello.html">hello</a></li>
         </ul>
     </nav>
