--- a/ethical-anylsis.html
+++ b/ethical-anylsis.html
@@ -15,7 +15,7 @@
         <ul>
             <li><a href="index.html">Introduction</a></li>
             <li><a href="ethical-anylsis.html">Ethics</a></li>
-             <li><a href="stakeholders.html.html">Stakeholders</a></li>
+             <li><a href="stakeholders.html">Stakeholders</a></li>
        <li><a href="hellohtml">hello</a></li>
         </ul>
     </nav>
