--- a/stakeholders.html
+++ b/stakeholders.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Critical discussion of the technology and its applications</h1>
+        <h1>Stakeholder Audience and Reccomendations</h1>
     </header>
 
     <nav>
@@ -20,11 +20,7 @@
     </nav>
 
     <main>
-        <section>
-            <h2>Stakeholder Audience and Reccomendations.</h2>
-        </section>
-
-        <section>
+         <section>
             <h2>Who Should Care:</h2>
             <p> We analyzed ChatGPT using three ethical frameworks:</p>
         <ul>
