--- a/ethical-anylsis.html
+++ b/ethical-anylsis.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Ethicas of ChatGPT </h1>
+        <h1>Ethics of ChatGPT </h1>
     </header>
 
     <nav>
