--- a/stakeholders.html
+++ b/stakeholders.html
@@ -41,7 +41,7 @@
         <ul>
             <li><strong>Policymakers: </strong> Develop clear laws around transparency, safety testing, and ethical use.</li>
             <li><strong>Developers: </strong>Prevent misuse, test for bias, and improve user safety.</li>
-            <li><strong>Educators: </strongeach Teach AI literacy, use ChatGPT to enhance learning, not replace it.</li>
+            <li><strong>Educators: </strong> Teach Teach AI literacy, use ChatGPT to enhance learning, not replace it.</li>
             <li><strong>Business Owners: </strong> Be transparent about AI use; retrain and upskill staff.</li>
             <li><strong>Citizens(The people of the world)</strong> Stay informed, question AI responses, and use critical thinking.</li>
         </ul>
