--- a/stakeholders.html
+++ b/stakeholders.html
@@ -43,7 +43,7 @@
             <li><strong>Developers: </strong>Prevent misuse, test for bias, and improve user safety.</li>
             <li><strong>Educators: </strong> Teach Teach AI literacy, use ChatGPT to enhance learning, not replace it.</li>
             <li><strong>Business Owners: </strong> Be transparent about AI use; retrain and upskill staff.</li>
-            <li><strong>Citizens(The people of the world)</strong> Stay informed, question AI responses, and use critical thinking.</li>
+            <li><strong>Citizens(The people of the world): </strong> Stay informed, question AI responses, and use critical thinking.</li>
         </ul>
         <br>
     <p>Ultimately, the future of ChatGPT and similar AI tools depends on how responsibly we choose to develop, regulate, and use them—balancing innovation with ethics to ensure technology serves the public good.</p>
