--- a/stakeholders.html
+++ b/stakeholders.html
@@ -46,7 +46,7 @@
             <li><strong>Citizens(The people of the world): </strong> Stay informed, question AI responses, and use critical thinking.</li>
         </ul>
         <br>
-    <p>Ultimately, the future of ChatGPT and similar AI tools depends on how responsibly we choose to develop, regulate, and use them—balancing innovation with ethics to ensure technology serves the public good.</p>
+    <p>Ultimately, the future of ChatGPT and similar AI tools depends on how responsibly we choose to develop, regulate, and use them balancing innovation with ethics to ensure technology serves the public good.</p>
         </section>
 
       
