--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <li>What responsibilities do developers have when releasing powerful AI tools?</li>
                 <li>How do we address bias, misinformation, or misuse?</li>
         </ul>
-            <p>These questions and their real-world implications make ChatGPT the perfect focus for a critical ethical discussion.</p>
+            <p>These questions and their real world implications make ChatGPT the perfect focus for a critical ethical discussion.</p>
             <br><br>
             <p><strong>The YouTube video below is a 12-minute CNBC segment that explains why ChatGPT is such a big deal—and a major part of our future.</strong></p>
          </section>
