--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <li><strong>Education</strong> (homework help, tutoring, plagiarism concerns), <strong> Challenges: </strong> Increased risk of plagiarism, Reduced critical thinking. Unequal access to AI tools</li>
                 <li><strong>Business</strong> (customer service, content writing, decision support),<strong>Challenges: </strong>Replaces human jobs, AI-generated content may lack accountability, Miscommunication or lack of empathy</li>
                 <li><strong>Healthcare</strong> (medical advice, mental health apps),<strong>Challenges: </strong> Ethical issues with diagnosis and mental health reliance , Lack of certified medical oversight</li>
-                <li><strong>Software development</strong> (code generation, debugging assistance),<strong>Challenges: </strong> May produce incorrect or inefficient code, Risks of over-reliance in professional environments</li>
+                <li><strong>Software development</strong> (code generation, debugging assistance),<strong>Challenges: </strong> May produce incorrect or inefficient code, Risks of overeliance in professional environments</li>
                 <li><strong>Media</strong> (AI journalism, storytelling, and creative writing), <strong>Challenges: </strong>Potential spread of misinformation, Undermining human creativity and authorship</li>
             </ul>
               <p>The pace at which ChatGPT has been adopted is unmatched—but it also raises deep ethical questions:</p>
