--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
         <section>
             <h2> What Is Our Target Technology?</h2>
-            <p>Our team chose ChatGPT, a cutting-edge language model developed by OpenAI. ChatGPT is a form ofGenerative AI, specifically designed to understand and generate human-like text. It belongs to a family of models called GPT (Generative Pre-trained Transformer), with the most recent versions demonstrating powerful capabilities in natural language understanding, conversation, content creation, summarization, and even coding.</p>
+            <p>Our team chose ChatGPT, a cutting edge language model developed by OpenAI. ChatGPT is a form ofGenerative AI, specifically designed to understand and generate human like text. It belongs to a family of models called GPT (Generative Pre-trained Transformer), with the most recent versions demonstrating powerful capabilities in natural language understanding, conversation, content creation, summarization, and even coding.</p>
             <p>Powered by deep learning and trained on vast datasets from books, websites, and other text sources, ChatGPT can carry out contextual dialogues, generate articles, write code, and more, all with astonishing coherence and fluidity.</p>
             <p>It is capable of generating human-like responses across a wide range of tasks including:</p>
             <ul> 
@@ -35,7 +35,7 @@
             </ul>
           <br>
         <h2>Why It Matters:</h2>
-        <p>ChatGPT is redefining communication, education, and automation at an unprecedented scale. As one of the fastest-adopted AI tools in history, it has sparked both excitement and concern about how we interact with technology.</p>
+        <p>ChatGPT is redefining communication, education, and automation at an unprecedented scale. As one of the fastest adopted AI tools in history, it has sparked both excitement and concern about how we interact with technology.</p>
         </section>
 
         <section>
