--- a/ethical-anylsis.html
+++ b/ethical-anylsis.html
@@ -49,7 +49,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2025 Our Team Project</p>
+        <p>&copy;© IT-304 Final Project</p>
     </footer>
 </body>
 </html>
