--- a/stakeholders.html
+++ b/stakeholders.html
@@ -53,7 +53,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2025 Our Team Project</p>
+        <p>&copy;© IT-304 Final Project</p>
     </footer>
 </body>
 </html>
