--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
     
     <footer>
-        <p>&copy;©IT-304 Final Project</p>
+        <p>&copy;IT-304 Final Project</p>
     </footer>
 </body>
 </html>
