--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <nav>
         <ul>
             <li><a href="index.html">Introduction</a></li>
+            <li><a href="examples.html">Real World Examples</a></li>
             <li><a href="ethical-anylsis.html">Ethics</a></li>
              <li><a href="stakeholders.html">Stakeholders</a></li>
         </ul>
